--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
       <p>
         Dori, the travelling Mora-loving merchant from Sumeru now brings the entirety of Teyvat to her customers' fingertips via Discord! Using Dori, you can spend Mora and Primogems to Wish for your favorite Genshin characters, and the currency can be earned from many unique and entertaining minigames!<br>
         <br>Dori is purely for fun, so there is no administration required.
+
+        <br><br>
+        Top.gg link: <a href="https://top.gg/bot/997892574150930523">https://top.gg/bot/997892574150930523</a>
+        <br>Discord Invite: <a href="https://discord.com/oauth2/authorize?client_id=997892574150930523&scope=bot&permissions=8192">Invite</a>
       </p>
 
     </main>
