--- a/tos.html
+++ b/tos.html
@@ -14,6 +14,7 @@
 
   <body>
 
+    <div class="signature"><p>Made by <a href="https://twitter.com/masaru9002">masaru9002</a><br></p></div>
     <div class="loader-wrapper">
     <span class="loader"></span>
     </div>
@@ -188,6 +189,7 @@ Some features, such as commands marked as “Gambling”, may not be used by ind
     <h2>Storage and Removal of Data</h2>
     <p>The Data are permanently stored within the Bot’s database, are unique to each user and are shared across all Servers. As a consequence, it is not possible to automatically remove any Data on purpose. If you wish to have all your Data removed, you may contact us to begin the removal process. For security reasons, we will ask you to provide us with proof of ownership of the account of which you wish the data to be removed. Keep in mind that in compliance with our Terms, we would not entertain any requests regarding alteration or removal of your Data unless a valid reason is provided.
     </p>
+    <br><br><br>
     </main>
     <script>
         $(window).on("load",function(){
@@ -197,5 +199,4 @@ Some features, such as commands marked as “Gambling”, may not be used by ind
         });
     </script>
   </body>
-  
   </html>
