--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <div class="signature"><p>Made by <a href="https://twitter.com/masaru9002">masaru9002</a><br></p></div>
 
     <div class="loader-wrapper">
     <span class="loader"></span>
