--- a/tos.html
+++ b/tos.html
@@ -154,7 +154,7 @@ Furthermore, you acknowledge that:
       <p>
       The Bot is intended for users who are at least above the minimal age described in Discord’s Terms of Service. All users who are minors in the jurisdiction in which they reside (generally under the age of 18) must have the permission of, and be directly supervised by, their parent or guardian to use the Bot. If you are a minor, you must have your parent or guardian read and agree to these Terms of Use prior to using the Bot.
 <br><br>
-Some features, such as commands marked as “Gambling”, may not be used by individuals under the age of gambling in their region of residence under any circumstances. Doing so will be seen as a violation of these terms and will result in a removal of the bot from any Servers shared with said individual.
+Some features, such as commands marked as “Gambling”, while never intended to encourage the acts and does not use actual currency, should be used with vigilance and under an adult's supervision by individuals below the age of gambling in their respective region.
 </p>
 
 <h2>Affiliation</h2>
