significant and final change

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
     />
     <title>Help</title>
+    <link rel="icon" type="image/x-icon" href="doli.png">
+
   </head>
 
   <body>
@@ -143,9 +145,16 @@
         In order to resolve a complaint regarding the Bot or to receive further information regarding use of the Bot, please contact us at:
 <br><br>
 Discord (DM): masaru#9002<br>
-Discord (Support Server): <a href="https://discord.gg/ECKgyv25Z2">https://discord.gg/ECKgyv25Z2</a>
+Discord (Support Server):
 
       </p>
+
+      <div class="container">
+        <div class="buttons">
+        <a href="https://discord.gg/ECKgyv25Z2" target="_blank" class="btn btn-3">
+          Join Discord</a>
+        </div>
+        </div>
 
     </main>
     <script>
