--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <title>Dori Bot</title>
+    <link rel="icon" type="image/x-icon" href="doli.png">
   </head>
 
   <body>
@@ -137,16 +138,33 @@
     </nav>
   
     <main>
-      <h1>Dori</h1>
+      <h1>Dori Bot</h1>
   
       <p>
         Dori, the travelling Mora-loving merchant from Sumeru now brings the entirety of Teyvat to her customers' fingertips via Discord! Using Dori, you can spend Mora and Primogems to Wish for your favorite Genshin characters, and the currency can be earned from many unique and entertaining minigames!<br>
         <br>Dori is purely for fun, so there is no administration required.
 
-        <br><br>
-        Top.gg link: <a href="https://top.gg/bot/997892574150930523">https://top.gg/bot/997892574150930523</a>
-        <br>Discord Invite: <a href="https://discord.com/oauth2/authorize?client_id=997892574150930523&scope=bot&permissions=8192">Invite</a>
+        <br><br>        
+        <!--Top.gg link: <a href="https://top.gg/bot/997892574150930523">https://top.gg/bot/997892574150930523</a>
+        <br>Discord Invite: <a href="https://discord.com/oauth2/authorize?client_id=997892574150930523&scope=bot&permissions=8192">Invite</a>-->
       </p>
+      <h3>Useful links:</h3>
+
+      <div class="container">
+      <div class="buttons">
+      <a href="https://top.gg/bot/997892574150930523" target="_blank" class="btn btn-1">Top.gg page</a>
+      <a href="https://discord.com/oauth2/authorize?client_id=997892574150930523&scope=bot&permissions=8192" target="_blank" class="btn btn-2">Invite Dori</a>
+      </div>
+      </div>
+
+      <h3>Dori status:</h3>
+      
+      <a href="https://top.gg/bot/997892574150930523">
+        <img src="https://top.gg/api/widget/997892574150930523.svg">
+      </a>
+
+      <br><br><br><br>
+
 
     </main>
     <script>
