--- a/tos.html
+++ b/tos.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
     />
     <title>Terms of Service</title>
+    <link rel="icon" type="image/x-icon" href="doli.png">
+
   </head>
 
   <body>
