--- a/help.html
+++ b/help.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
     />
     <title>Help</title>
+    <link rel="icon" type="image/x-icon" href="doli.png">
+
   </head>
 
   <body>
