--- a/home.html
+++ b/home.html
@@ -141,8 +141,8 @@
       <h1>Dori Bot</h1>
   
       <p>
-        Dori, the travelling Mora-loving merchant from Sumeru now brings the entirety of Teyvat to her customers' fingertips via Discord! Using Dori, you can spend Mora and Primogems to Wish for your favorite Genshin characters, and the currency can be earned from many unique and entertaining minigames!<br>
-        <br>Dori is purely for fun, so there is no administration required.
+        Dori is a purely for fun Genshin themed Discord bot with various minigames like Poker, Trivia Quiz, Flag Guesser, Wish simulator with 99.9% accuracy and other utility commands, brought to you from Sumeru, Teyvat!<br>
+        <br>There is absolutely is no administratior permissions required and there are no admin features on Dori. Dori cannot read or log any message content, user status, server info or any kind of private information (see more in ToS). Again, Dori is just for fun. Thank you for adding Dori.
 
         <br><br>        
         <!--Top.gg link: <a href="https://top.gg/bot/997892574150930523">https://top.gg/bot/997892574150930523</a>
