--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <h1>Dori Bot</h1>
   
       <p>
-        Dori is a purely for fun Genshin themed bot with various minigames like Poker, Trivia Quiz, Flag Guesser, Wish simulator with 99.9% accuracy and other utility commands, brought to you from Sumeru, Teyvat!<br>
+        Dori is a purely for fun Genshin themed Discord bot with various minigames like Poker, Trivia Quiz, Flag Guesser, Wish simulator with 99.9% accuracy and other utility commands, brought to you from Sumeru, Teyvat!<br>
         <br>There is absolutely is no administratior permissions required and there are no admin features on Dori. Dori cannot read or log any message content, user status, server info or any kind of private information (see more in ToS). Again, Dori is just for fun. Thank you for adding Dori.
 
         <br><br>        
